--- a/canvas-DrawingBoard/index.html
+++ b/canvas-DrawingBoard/index.html
@@ -26,7 +26,8 @@
         </svg>
   </div>
   <ol class="colors">
-    <li id="lightblue" class="lightblue active"></li>
+    <li id="black" class="black active"></li>
+    <li id="lightblue" class="lightblue"></li>
     <li id="pink" class="pink"></li>
     <li id="lightgreen" class="lightgreen"></li>
   </ol>
